// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`makeFetchOpts handles a community 1`] = `
Object {
  "search": "fee",
  "slug": "comslug",
  "sortBy": "join",
  "subject": "community",
}
`;

exports[`makeFetchOpts handles a network 1`] = `
Object {
  "search": "fee",
  "slug": "netslug",
  "sortBy": "name",
  "subject": "network",
}
`;

exports[`makeFetchOpts handles no community or network 1`] = `
Object {
  "search": "fee",
  "slug": "all-communities",
  "sortBy": "join",
  "subject": "all-communities",
}
`;

exports[`mapStateToProps handles null value for lastViewedCommunity 1`] = `
Object {
  "community": null,
  "currentUser": SessionBoundModel {
    "_fields": Object {
      "id": 123,
      "memberships": undefined,
      "messageThreads": undefined,
      "notifications": undefined,
      "posts": undefined,
      "skills": undefined,
    },
    "id": 123,
  },
  "fetchOpts": Object {
    "search": undefined,
    "slug": "all-communities",
    "sortBy": undefined,
    "subject": "all-communities",
  },
  "hasMore": undefined,
  "isAll": true,
  "members": Array [],
  "network": null,
  "pending": undefined,
  "search": undefined,
  "slug": "all-communities",
  "sortBy": undefined,
  "subject": "all-communities",
}
`;
